<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_feed"
        android:title="Feed"/>

    <item
        android:id="@+id/navigation_my_goals"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="My Goals" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_profile"
        android:title="My Friends" />

</menu>